--- a/UserMain.master
+++ b/UserMain.master
@@ -2,6 +2,7 @@
     CodeBehind="UserMain.master.cs" Inherits="ExamCrazy.UserMain" %>
 
 <%@ Register TagPrefix="ucl" TagName="userinfo" Src="~/Control/UserInfo.ascx" %>
+<%@ Register TagPrefix="ucl" TagName="discussion" Src="~/Control/DiscussionForm.ascx" %>
 <asp:Content ID="Content1" ContentPlaceHolderID="head" runat="server">
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
@@ -16,4 +17,5 @@
 <asp:Content ID="Content4" ContentPlaceHolderID="MainContent" runat="server">
     <asp:ContentPlaceHolder ID="MainContent" runat="server">
     </asp:ContentPlaceHolder>
+    <ucl:discussion ID="discussion" runat="server" />
 </asp:Content>
