--- a/UserMain.master
+++ b/UserMain.master
@@ -3,6 +3,7 @@
 
 <%@ Register TagPrefix="ucl" TagName="userinfo" Src="~/Control/UserInfo.ascx" %>
 <%@ Register TagPrefix="ucl" TagName="discussion" Src="~/Control/DiscussionForm.ascx" %>
+<%@ Register TagPrefix="ucl" TagName="announce" Src="~/Control/Announcement.ascx" %>
 <asp:Content ID="Content1" ContentPlaceHolderID="head" runat="server">
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
@@ -17,5 +18,6 @@
 <asp:Content ID="Content4" ContentPlaceHolderID="MainContent" runat="server">
     <asp:ContentPlaceHolder ID="MainContent" runat="server">
     </asp:ContentPlaceHolder>
+    <ucl:announce ID="announce" runat="server" />
     <ucl:discussion ID="discussion" runat="server" />
 </asp:Content>
