--- a/UserMain.master
+++ b/UserMain.master
@@ -2,8 +2,6 @@
     CodeBehind="UserMain.master.cs" Inherits="ExamCrazy.UserMain" %>
 
 <%@ Register TagPrefix="ucl" TagName="userinfo" Src="~/Control/UserInfo.ascx" %>
-<%@ Register TagPrefix="ucl" TagName="discussion" Src="~/Control/DiscussionForm.ascx" %>
-<%@ Register TagPrefix="ucl" TagName="announce" Src="~/Control/Announcement.ascx" %>
 <asp:Content ID="Content1" ContentPlaceHolderID="head" runat="server">
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
@@ -18,6 +16,11 @@
 <asp:Content ID="Content4" ContentPlaceHolderID="MainContent" runat="server">
     <asp:ContentPlaceHolder ID="MainContent" runat="server">
     </asp:ContentPlaceHolder>
-    <ucl:announce ID="announce" runat="server" />
-    <ucl:discussion ID="discussion" runat="server" />
+    <asp:Panel ID="userpageid" Visible="true" runat="server">
+    </asp:Panel>
+    <asp:Panel ID="userlistid" Visible="false" runat="server">
+        <fieldset>
+            <legend>User List</legend>
+        </fieldset>
+    </asp:Panel>
 </asp:Content>
