--- a/css/contentxd.css
+++ b/css/contentxd.css
@@ -426,3 +426,28 @@ margin-right: 35px;
 .srating a.fivestars:hover {
     width: 100px;
 }
+
+.modalBackground {
+	background-color:Gray;
+	filter:alpha(opacity=70);
+	opacity:0.7;
+}
+
+.modalPopup {
+	background-color:#ffffdd;
+	/*border-width:3px;
+	border-style:solid;
+	border-color:Gray;
+	padding:3px;*/
+	width:250px;
+}
+
+.floatLeft
+{
+    float:left;
+}
+
+.floatRight
+{
+    float:right;
+}
