Master: Header Footer: Script manager call
Added support of script manager in header footer master.

Signed-off-by: NKK <nkk@gmail.com>

--- a/HeaderFooter.Master
+++ b/HeaderFooter.Master
@@ -35,6 +35,8 @@
 <body>
     <script type="text/javascript" src="<%=ResolveUrl("~/js/wz_tooltip.js")%>"></script>
     <form id="form1" runat="server">
+    <ajaxToolkit:ToolkitScriptManager runat="Server" ID="ScriptManager1" ScriptMode="Release"
+        ViewStateMode="Disabled" />
     <div class="wrapper">
         <!-- ===== PAGE DIV START HERE===== -->
         <div class="page">
